# un-fstring

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  un_fstring.py
.github/workflows/: publish-to-pypi.yml  tests.yml
tests/: test_conversion.py
