[metadata]
name = un_fstring
version = 0.1.3
description = A tool to convert f-strings to .format() calls.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshKarpel/un-fstring
author = Josh Karpel
author_email = josh.karpel@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = un_fstring
install_requires =
    astroid
    tokenize-rt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    un-fstring = un_fstring:cli

[options.extras_require]
tests =
    mypy
    pytest>=6

[mypy]
files = un_fstring.py, tests/*.py
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false

[bdist_wheel]
universal = True
